--- a/index.html
+++ b/index.html
@@ -37,22 +37,51 @@
     <p>Bitte beantworten Sie die Fragen Schritt für Schritt.</p>
   </header>
 
-  <div id="bot-container"></div>
-
-  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+  <div id="webchat-container" style="position: relative; width: 100%; height: 100%;">
+  <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
   <script>
-    window.addEventListener("load", function () {
-      window.botpressWebChat.init({
-        botId: "a9aedd31-c2f2-4c94-aca3-8ffa88971e44",
-        hostUrl: "https://cdn.botpress.cloud/webchat/v1",
-        messagingUrl: "https://messaging.botpress.cloud",
-        container: "#bot-container",
-        showChatButton: false,
-        hideWidget: true,
-        layoutWidth: "100%",
-        containerWidth: "100%"
-      });
+    window.botpress.on("webchat:ready", () => {
+      window.botpress.open();
+    });
+
+    window.botpress.init({
+      "botId": "YOUR_BOT_ID",
+      "configuration": {
+        "botName": "Mr. Botpress Bot",
+        "botAvatar": "https://cdn.prod.website-files.com/637e5037f3ef83b76dcfc8f9/65b02372899b558fa6d650b8_Pricing%20Changes.webp",
+        "website": {},
+        "email": {},
+        "phone": {},
+        "termsOfService": {},
+        "privacyPolicy": {},
+        "color": "#3bf5a1",
+        "variant": "solid",
+        "themeMode": "light",
+        "fontFamily": "inter",
+        "radius": 1
+      },
+      "clientId": "YOUR_CLIENT_ID"
     });
   </script>
+  <style>
+    #webchat-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+    .bpFab {
+      display: none;
+    }
+    .bpWebchat {
+      position: absolute !important;
+      top: 0 !important;
+      left: 0 !important;
+      right: 0 !important;
+      bottom: 0 !important;
+      width: 100% !important;
+      height: 100% !important;
+    }
+  </style>
+</div>
 </body>
 </html>
