--- a/index.html
+++ b/index.html
@@ -1,46 +1,24 @@
-<div id="webchat-container" style="position: relative; width: 100%; height: 100%;">
-  <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
-  <script>
-    window.botpress.on("webchat:ready", () => {
-      window.botpress.open();
-    });
 
-    window.botpress.init({
-      "botId": "YOUR_BOT_ID",
-      "configuration": {
-        "botName": "Mr. Botpress Bot",
-        "botAvatar": "https://cdn.prod.website-files.com/637e5037f3ef83b76dcfc8f9/65b02372899b558fa6d650b8_Pricing%20Changes.webp",
-        "website": {},
-        "email": {},
-        "phone": {},
-        "termsOfService": {},
-        "privacyPolicy": {},
-        "color": "#3bf5a1",
-        "variant": "solid",
-        "themeMode": "light",
-        "fontFamily": "inter",
-        "radius": 1
-      },
-      "clientId": "YOUR_CLIENT_ID"
-    });
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <title>Rechtsassistent</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ 
+</head>
+<body>
+  <header>
+    <h1>Willkommen beim Rechtsassistenten</h1>
+    <p>Bitte beantworten Sie die Fragen Schritt für Schritt.</p>
+  </header>
+  <script type="module">
+    import Typebot from 'https://cdn.jsdelivr.net/npm/@typebot.io/js@0.3/dist/web.js';
+  
+    Typebot.initStandard({ typebot: "quiz-qb7ttgz" });
   </script>
-  <style>
-    #webchat-container {
-      position: relative;
-      width: 100%;
-      height: 100%;
-    }
-    .bpFab {
-      display: none;
-    }
-    .bpWebchat {
-      position: absolute !important;
-      top: 0 !important;
-      left: 0 !important;
-      right: 0 !important;
-      bottom: 0 !important;
-      width: 100% !important;
-      height: 100% !important;
-    }
-  </style>
-</div>
+  
+  <typebot-standard style="width: 100%; height: 600px; "></typebot-standard>
+
+</body>
+</html>
